# ic-evm-sign

./: Cargo.toml  LICENSE  Makefile  README.md  dfx.json  notes.md  package-lock.json  package.json  test.md  test.sh
.github/workflows/: tests.yml
IC/: Cargo.toml  README.md  dfx.json  note.md
IC/src/IC_backend/: Cargo.toml
IC/src/no_key_wallet/: Cargo.toml
IC/threshold-ecdsa/: test.sh
dev/IC_backend/: Cargo.toml
dev/backend/: Cargo.toml
dev/backend/src/: lib.rs
dev/ethereum-node/: hardhat.config.js  package-lock.json  package.json
dev/frontend/: .env.sample  package-lock.json  package.json
dev/frontend/public/: index.html
dev/frontend/src/: App.js  index.js  networks.js
dev/local-node/: hardhat.config.js  package-lock.json  package.json
e2e/backend/: Cargo.toml  backend.did
e2e/backend/src/: lib.rs
e2e/tests/: hardhat.config.js  index.js  networks.json  package-lock.json  package.json  test.sh
e2e/tests/contracts/: Example.sol  ExampleToken.sol
e2e/tests/utils/: idleService.js  index.js
hardhat/: notes.md  package-lock.json  package.json  test.md
hardhat/test/: sign.js
lib/: Cargo.toml
lib/no_key_wallet/: Cargo.toml
lib/no_key_wallet/src/: lib.rs  mocks.rs  state.rs  tests.rs  transaction.rs  types.rs  utils.rs
lib/src/: ecdsa.rs  lib.rs  mocks.rs  state.rs  tests.rs  transaction.rs  utils.rs
resources/: evmTx.md
test/: sign.js
tests/: hardhat.config.js  package.json
tests/e2e/: .env.sample  debug.js  index.js  package-lock.json  package.json  sign.js  test.sh
tests/e2e/contracts/: Example.sol  (+1 more)
tests/test/: sign.js
(+6 files in other folders)
