[package]
name = "ic-evm-sign"
version = "0.0.1"
edition = "2021"
description = "This library enables Internet Computer canisters to sign transactions for EVM-compatible blockchains"
license = "Apache-2.0"

[dependencies]
ic-cdk = "0.5.2"
candid = "0.7.14"
serde = "1"
ethereum-rlp = "0.2.3"
easy-hasher = "2.2.1"
libsecp256k1 = "0.6.0"
futures = "0.3.25"
